<resources>
    <string name="app_name">MiniMoneybox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>
    <string name="title_activity_user_accounts">UserAccountsActivity</string>
    <string name="user_accounts">User Accounts\nHello %s\nTotal Plan Value: %s</string>
    <string name="title_activity_individual_accounts">IndividualAccountsActivity</string>
    <string name="add_10">Add £10</string>
    <string name="individual_account">Individual Account\n\n%s\n\nPlan Value: %s \n\nMoneybox: %s</string>
</resources>
